--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "Task-Tracker",
+  "name": "Task-manager",
   "version": "1.0.0",
-  "description": "task tracker",
+  "description": "task manager",
   "main": "server.js",
   "license": "MIT",
-  "scripts":{
+  "scripts": {
     "start": "node server.js"
   },
-  "author": "sait ibrahim",
+  "author": "Aditya jain",
   "dependencies": {
     "json-server": "^0.17.0"
   }
